<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp_30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <com.anilxpert.food.custom_class.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/str_welcome"
            android:textSize="@dimen/sp_24" />

        <com.anilxpert.food.custom_class.RippleViewButton
            android:id="@+id/btnSignUp"
            style="@style/button_signup"
            android:background="@drawable/shape_rect_orage"
            android:drawableTint="@color/colorWhite"
            android:text="@string/str_sign_in"
            app:alphaFactor="0.7"
            app:rippleColor="@color/btnRippleLogin" />

        <com.anilxpert.food.custom_class.RippleViewButton
            android:id="@+id/btnRegister"
            style="@style/button_signup"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/shape_rect_orage"
            android:drawableTint="@color/colorWhite"
            android:text="@string/str_register"
            app:alphaFactor="0.7"
            app:rippleColor="@color/btnRippleLogin" />

        <com.anilxpert.food.custom_class.RippleViewButton
            android:id="@+id/btnMenu"
            style="@style/button_signup"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/rect_bg_black"
            android:text="@string/str_menu"
            app:alphaFactor="0.7"
            app:rippleColor="@color/btnRippleLogin" />
    </LinearLayout>

</LinearLayout>