<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/sininLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"></LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <com.anilxpert.food.custom_class.TextViewRegularBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="@dimen/dp_40"
            android:text="@string/account_information"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordrecolor"
            android:minHeight="@dimen/dp_40"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:id="@+id/txtFName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@null"
                    android:gravity="center|right"
                    android:textColor="@color/bgBlack" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bordrecolor"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:gravity="right"
                android:weightSum="1">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:id="@+id/txtLName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@null"
                    android:gravity="center|right"
                    android:textColor="@color/bgBlack" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bordrecolor"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:gravity="right"

                android:weightSum="1">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:id="@+id/txtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@null"
                    android:gravity="center|right"
                    android:text="hello"
                    android:textColor="@color/txtBlack" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bordrecolor"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="right"
                android:weightSum="1">

                <com.anilxpert.food.custom_class.TextViewRegular
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@null"
                    android:gravity="center|right"
                    android:textColor="@color/txtBlack" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnRed"
            android:gravity="center"
            android:minHeight="@dimen/dp_40"
            android:text="@string/save"
            android:textColor="@color/txtWhite"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>
</RelativeLayout>

